# phreeqpy

./: .gitignore  CHANGELOG  MANIFEST.in  README.md  pyproject.toml
doc/: changelog.rst  conf.py  contents.rst  index.rst
doc/examples/: ex11.rst  ex11_parallel.rst  index.rst
examples/iphreeqc/: parallel_advect_dll.py
examples/iphreeqc/data/: out.txt
examples/phreeqcrm/: advect.py  ex11-advect.yaml
src/phreeqpy/input/: base.py  datatypes.py  namespace.py
src/phreeqpy/input/keywords/: database.py
src/phreeqpy/iphreeqc/: libiphreeqc.0.dylib  phreeqc_dll.py
src/phreeqpy/iphreeqc/phreeqc3/: libiphreeqc-3.7.1.dylib  libiphreeqc-3.7.3-m1.dylib  libiphreeqc-3.7.3.dylib
src/phreeqpy/phreeqcrm/: rm_model.py
tests/: conftest.py
tests/test_input/: attr.py  helpers.py  test_advection.py  test_datatypes.py  test_equilibrium_phases.py
