[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phreeqpy"
description = "Python tools for PHREEQC."
authors = [
    {name = "Mike Müller", email = 'mmueller@hydrocomputing.com'},
    ]
readme = "README.md"
requires-python = ">=3.9"
keywords = [
    "PHREEQC",
    "hydrogeochemistry",
    "modeling",
    "modeling coupling"
    ]
license = {text = "BSD-3-Clause"}
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Environment :: Console",
  "Framework :: Jupyter :: JupyterLab",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: Python :: Implementation :: CPython",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Hydrology"
]


dynamic = ["version"]

dependencies = [
    "pywin32; os_name == 'nt'"
]

[project.optional-dependencies]
phreeqcrm = [
    "phreeqcrm; platform_python_implementation == 'CPython'",
    "yaml-cpp; platform_python_implementation == 'CPython'",
    "pandas; platform_python_implementation == 'CPython'",
    "matplotlib; platform_python_implementation == 'CPython'",
]

[project.urls]
home-page = "https://www.phreeqpy.com/"

[tool.setuptools]
zip-safe = false

[tool.setuptools_scm]
write_to = "src/phreeqpy/_version.py"
